# IntelligentUAVChampionship

basic_dev/: Dockerfile  setup.bash
basic_dev/src/EGO-Planner/src/Utils/moving_obstacles/src/: moving_obstacles.cpp
basic_dev/src/EGO-Planner/src/planner/plan_env/src/: grid_map.cpp  grid_map_bigmap.cpp
basic_dev/src/EGO-Planner/src/planner/plan_manage/: CMakeLists.txt  package.xml
basic_dev/src/EGO-Planner/src/planner/plan_manage/launch/: single_drone.launch  test.launch
basic_dev/src/EGO-Planner/src/planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
basic_dev/src/EGO-Planner/src/planner/px4ctrl/config/: ctrl_param_fpv.yaml
basic_dev/src/EGO-Planner/src/planner/px4ctrl/include/: PX4CtrlParam.h  controller.h
basic_dev/src/FAST_LIO/: CMakeLists.txt
basic_dev/src/FAST_LIO/config/: marsim.yaml  mid360.yaml
basic_dev/src/FAST_LIO/launch/: mapping_marsim.launch
basic_dev/src/FAST_LIO/src/: IMU_Processing.hpp  gpsTransform.cpp  laserMapping.cpp  preprocess.cpp
basic_dev/src/Point-LIO/config/: avia.yaml
basic_dev/src/Point-LIO/launch/: mapping_avia.launch
basic_dev/src/Point-LIO/src/: laserMapping.cpp
basic_dev/src/basic_dev/launch/: start.launch
basic_dev/src/imu_gps_odometry/: CMakeLists.txt
basic_dev/src/imu_gps_odometry/include/: imu_gps_odometry.hpp
basic_dev/src/imu_gps_odometry/src/: eskf.cpp  imu_gps_odometry.cpp
basic_dev/src/path_sender/: CMakeLists.txt
basic_dev/src/path_sender/config/: paths.yaml
basic_dev/src/path_sender/include/: path_sender.hpp
basic_dev/src/path_sender/src/: path_sender.cpp
(+12 files in other folders)
